Fix bug where content would be hidden under the nav bar

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,3 +1,7 @@
+body {
+  padding-top: 50px;
+}
+
 .footer {
   padding: 20px 0;
   background-color: #f8f8f8;
